msg/async: should not rebind using the new nonce

and Processor::bind() will set the new addr and nonce to myaddr once
it binds the new listening address.

Fixes: http://tracker.ceph.com/issues/17807
Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>
Signed-off-by: Kefu Chai <kchai@redhat.com>